# ner

./: .gitignore  Cargo.toml  README.md  format_templates.py  split_html.py
ner-core/: Cargo.toml
ner-core/src/: corpus.rs  crf.rs  features.rs  hmm.rs  lib.rs  maxent.rs  model.rs  ned.rs  nel.rs  perceptron.rs  pipeline.rs  rule_based.rs  sota_2024.rs  span.rs  tagger.rs  tokenizer.rs  viterbi.rs
ner-web/: Cargo.toml
ner-web/src/: main.rs
ner-web/src/templates/: index.html
ner-web/templates/: base.html  gliner2.html  ned.html  nel.html  ner.html  sota.html  tokenizer.html
ner-web/templates/components/: ned_results.html  nel_results.html  sota_results.html  token_list.html
